--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorPrimaryLight">#B2DFDB</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorDisable">#B2B2B2</color>
@@ -13,7 +14,8 @@
     <color name="colorBackground">#F1F4F8</color>
     <color name="colorTextPrimary">#000000</color>
     <color name="colorTextPrimaryLight">#FFFFFF</color>
-    <color name="colorTextSecondary">#676767</color>
+    <color name="colorTextSecondary">#757575</color>
+    <color name="colorTextSecondaryLight">#dadada</color>
     <color name="colorTextState">#868686</color>
     <color name="colorDivider">#B2B2B2</color>
     <color name="colorLightGreen">#f2faed</color>
