--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -5,27 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="club.veev.babycount.EditCategoryActivity">
+    tools:context="club.veev.babycount.RecordDetailActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/edit_category_app_bar"
+        android:id="@+id/record_detail_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_bar_height"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/edit_category_toolbar_layout"
+            android:id="@+id/record_detail_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:background="@mipmap/pic_material_design_bg"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/edit_category_toolbar">
+            app:toolbarId="@+id/record_detail_toolbar">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/edit_category_toolbar"
+                android:id="@+id/record_detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
@@ -34,15 +34,15 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_edit_category" />
+    <include layout="@layout/content_record_detail" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/edit_category_fab"
+        android:id="@+id/record_detail_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/edit_category_app_bar"
+        app:layout_anchor="@id/record_detail_app_bar"
         app:layout_anchorGravity="bottom|end"
-        android:src="@drawable/ic_add_white_24dp"/>
+        android:src="@drawable/ic_create_white_24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
