优化目录结构

--- a/app/src/main/res/layout/content_add_place.xml
+++ b/app/src/main/res/layout/content_add_place.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.AddPlaceActivity"
+    tools:context="club.veev.babycount.place.AddPlaceActivity"
     tools:showIn="@layout/activity_add_place">
 
     <RelativeLayout
