--- a/app/src/main/res/layout/content_add_record.xml
+++ b/app/src/main/res/layout/content_add_record.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.AddRecordActivity"
+    tools:context="club.veev.babycount.record.AddRecordActivity"
     tools:showIn="@layout/activity_add_record">
 
     <LinearLayout android:layout_width="match_parent"
@@ -104,7 +104,7 @@
                         android:id="@+id/add_count_text_date_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="日期"
+                        android:text="@string/Common_Date"
                         android:textSize="@dimen/text_size_caption"
                         android:textColor="@color/colorTextSecondary"/>
 
@@ -135,7 +135,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="时间"
+                        android:text="@string/Common_Time"
                         android:textSize="@dimen/text_size_caption"
                         android:textColor="@color/colorTextSecondary"/>
 
