--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="club.veev.babycount.RecordDetailActivity">
+    tools:context="club.veev.babycount.record.RecordDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/record_detail_app_bar"
