--- a/app/src/main/res/layout/activity_select_source.xml
+++ b/app/src/main/res/layout/activity_select_source.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="club.veev.babycount.SelectSourceActivity">
+    tools:context="club.veev.babycount.person.SelectSourceActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
