--- a/app/src/main/res/layout/content_add_category.xml
+++ b/app/src/main/res/layout/content_add_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.AddRecordActivity"
+    tools:context="club.veev.babycount.record.AddRecordActivity"
     tools:showIn="@layout/activity_add_category"
     android:orientation="vertical">
 
