--- a/app/src/main/res/layout/content_add_person.xml
+++ b/app/src/main/res/layout/content_add_person.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.AddPersonActivity"
+    tools:context="club.veev.babycount.person.AddPersonActivity"
     tools:showIn="@layout/activity_add_person">
 
     <RelativeLayout
