--- a/app/src/main/res/layout/content_record_detail.xml
+++ b/app/src/main/res/layout/content_record_detail.xml
@@ -5,332 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.RecordDetailActivity"
+    tools:context="club.veev.babycount.record.RecordDetailActivity"
     tools:showIn="@layout/activity_record_detail">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/record_detail_recycler_category"
-            android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="48dp"/>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_value"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_value"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_create_grey_24dp" />
-
-            <TextView
-                android:id="@+id/record_detail_text_value_unit"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="16dp"
-                android:background="@null"
-                android:textSize="@dimen/text_size_body"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextPrimary"
-                android:maxWidth="100dp"
-                android:lines="1"
-                tools:hint="cm" />
-
-            <EditText
-                android:id="@+id/record_detail_edit_value"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_value"
-                android:layout_toStartOf="@+id/record_detail_text_value_unit"
-                android:background="@null"
-                android:hint="@string/Record_Value"
-                android:textSize="@dimen/text_size_body"
-                android:imeOptions="actionNext"
-                android:inputType="numberDecimal"
-                android:lines="1" />
-
-            <View
-                android:id="@+id/record_detail_view_div"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/record_detail_edit_value"
-                android:layout_alignStart="@+id/record_detail_edit_value"
-                android:layout_alignParentEnd="true"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_time"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_time_grey_24dp" />
-
-            <LinearLayout
-                android:id="@+id/record_detail_linear_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/record_detail_image_time"
-                android:layout_marginStart="16dp"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:id="@+id/record_detail_time_linear_date"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/record_detail_text_date_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="日期"
-                        android:textSize="@dimen/text_size_caption"
-                        android:textColor="@color/colorTextSecondary"/>
-
-                    <TextView
-                        android:id="@+id/record_detail_text_date_data"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        tools:text="10月14"
-                        android:textSize="@dimen/text_size_body"
-                        android:textColor="@color/colorTextPrimary"/>
-                </LinearLayout>
-
-                <View
-                    android:id="@+id/record_detail_view_time_h"
-                    android:layout_width="0.2dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/colorDivider"/>
-
-                <LinearLayout
-                    android:id="@+id/record_detail_time_linear_time"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/record_detail_text_time_label"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:text="时间"
-                        android:textSize="@dimen/text_size_caption"
-                        android:textColor="@color/colorTextSecondary"/>
-
-                    <TextView
-                        android:id="@+id/record_detail_text_time_data"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        tools:text="21:16"
-                        android:textSize="@dimen/text_size_body"
-                        android:textColor="@color/colorTextPrimary"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:id="@+id/record_detail_view_div_time"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/record_detail_linear_time"
-                android:layout_alignStart="@+id/record_detail_linear_time"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_desc"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_description_grey_24dp" />
-
-            <TextView
-                android:id="@+id/record_detail_text_desc"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_desc"
-                android:textSize="@dimen/text_size_body"
-                android:gravity="center_vertical|start"
-                android:hint="@string/Category_Desc"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextPrimary"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <View
-                android:id="@+id/record_detail_view_desc"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/record_detail_text_desc"
-                android:layout_alignStart="@+id/record_detail_text_desc"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_place"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_place"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_place_grey_24dp" />
-
-            <TextView
-                android:id="@+id/record_detail_text_place"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_place"
-                android:textSize="@dimen/text_size_body"
-                android:gravity="center_vertical|start"
-                android:hint="@string/Category_Place"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextPrimary"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <TextView
-                android:id="@+id/record_detail_text_location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_place"
-                android:layout_below="@id/record_detail_text_place"
-                android:textSize="@dimen/text_size_caption"
-                android:gravity="center_vertical|start"
-                android:hint="@string/Place_Location"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextSecondary"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <View
-                android:id="@+id/record_detail_view_place"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_alignStart="@+id/record_detail_text_place"
-                android:layout_below="@+id/record_detail_text_location"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_source"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_source"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_person_grey_24dp" />
-
-            <TextView
-                android:id="@+id/record_detail_text_source"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_source"
-                android:textSize="@dimen/text_size_body"
-                android:gravity="center_vertical|start"
-                android:hint="@string/Category_Source"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextPrimary"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <View
-                android:id="@+id/record_detail_view_source"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/record_detail_text_source"
-                android:layout_alignStart="@+id/record_detail_text_source"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/record_detail_relative_target"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:paddingTop="16dp">
-
-            <ImageView
-                android:id="@+id/record_detail_image_target"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_people_grey_24dp" />
-
-            <TextView
-                android:id="@+id/record_detail_text_target"
-                android:layout_width="match_parent"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@+id/record_detail_image_target"
-                android:textSize="@dimen/text_size_body"
-                android:gravity="center_vertical|start"
-                android:hint="@string/Category_Target"
-                android:textColorHint="@color/colorTextState"
-                android:textColor="@color/colorTextPrimary"
-                android:maxLines="2"
-                android:ellipsize="end"/>
-
-            <View
-                android:id="@+id/record_detail_view_target"
-                android:layout_width="match_parent"
-                android:layout_height="0.2dp"
-                android:layout_marginTop="16dp"
-                android:layout_below="@+id/record_detail_text_target"
-                android:layout_alignStart="@+id/record_detail_text_target"
-                android:background="@color/colorDivider" />
-        </RelativeLayout>
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
