--- a/app/src/main/res/layout/content_select_place.xml
+++ b/app/src/main/res/layout/content_select_place.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.SelectPlaceActivity"
+    tools:context="club.veev.babycount.place.SelectPlaceActivity"
     tools:showIn="@layout/activity_select_place">
 
     <android.support.v7.widget.RecyclerView
