--- a/app/src/main/res/layout/content_select_target.xml
+++ b/app/src/main/res/layout/content_select_target.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="club.veev.babycount.SelectTargetActivity"
+    tools:context="club.veev.babycount.person.SelectTargetActivity"
     tools:showIn="@layout/activity_select_target">
 
     <android.support.v7.widget.RecyclerView
