--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="club.veev.babycount.HomeFragment">
+    tools:context="club.veev.babycount.home.HomeFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/home_recycler_count"
