--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="club.veev.babycount.RecordFragment"
+    tools:context="club.veev.babycount.category.RecordFragment"
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
