--- a/app/src/main/res/layout/fragment_record_item.xml
+++ b/app/src/main/res/layout/fragment_record_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="club.veev.babycount.RecordFragment"
+    android:background="@color/colorBackground"
+    tools:context="club.veev.babycount.category.RecordFragment"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
