优化分类名长度

--- a/app/src/main/res/layout/content_add_category.xml
+++ b/app/src/main/res/layout/content_add_category.xml
@@ -37,7 +37,8 @@
             android:hint="@string/Category_Name"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:lines="1" />
+            android:lines="1"
+            android:maxLength="10"/>
 
         <View
             android:id="@+id/add_category_view_name"
