--- a/app/src/main/res/layout/content_edit_category.xml
+++ b/app/src/main/res/layout/content_edit_category.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="club.veev.babycount.category.EditCategoryActivity"
     tools:showIn="@layout/activity_edit_category">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/edit_category_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="false"
         app:layoutManager="LinearLayoutManager"/>
 
 </android.support.v4.widget.NestedScrollView>
