--- a/app/src/main/res/layout/widget_quickly_add.xml
+++ b/app/src/main/res/layout/widget_quickly_add.xml
@@ -13,8 +13,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/widget_quickly_add_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="GridLayoutManager"
-        app:spanCount="4"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
